--- a/examples/res/layout/activity_main.xml
+++ b/examples/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/bt_openHackRF"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
