Extending example app

--- a/examples/res/layout/activity_main.xml
+++ b/examples/res/layout/activity_main.xml
@@ -9,24 +9,95 @@
     tools:context="com.mantz_it.hackrf_test.MainActivity" >
 
     <Button
+        android:id="@+id/bt_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tv_output"
+        android:layout_below="@+id/bt_openHackRF"
+        android:text="@string/info"
+        android:onClick="info" />
+
+    <Button
+        android:id="@+id/bt_rx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/bt_info"
+        android:layout_alignBottom="@+id/bt_info"
+        android:layout_toRightOf="@+id/bt_info"
+        android:text="@string/rx"
+        android:onClick="rx" />
+
+    <Button
+        android:id="@+id/bt_tx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/bt_rx"
+        android:layout_alignBottom="@+id/bt_rx"
+        android:layout_toRightOf="@+id/bt_rx"
+        android:text="@string/tx"
+        android:onClick="tx" />
+
+    <Button
         android:id="@+id/bt_openHackRF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:text="@string/openHackrfDevice" 
-        android:onClick="openHackrf" />
+        android:onClick="openHackrf"
+        android:text="@string/openHackrfDevice" />
+
+    <TextView
+        android:id="@+id/tv_sampRateLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bt_info"
+        android:layout_below="@+id/bt_info"
+        android:text="@string/sampRate" />
+
+    <EditText
+        android:id="@+id/et_sampRate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tv_sampRateLabel"
+        android:layout_alignBottom="@+id/tv_sampRateLabel"
+        android:layout_alignRight="@+id/tv_output"
+        android:layout_toRightOf="@+id/tv_freqLabel"
+        android:ems="10"
+        android:inputType="number"
+        android:text="2000000" >
+
+    </EditText>
+
+    <TextView
+        android:id="@+id/tv_freqLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/et_freq"
+        android:layout_alignBottom="@+id/et_freq"
+        android:layout_alignLeft="@+id/tv_sampRateLabel"
+        android:text="@string/freq" />
+
+    <EditText
+        android:id="@+id/et_freq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/et_sampRate"
+        android:layout_below="@+id/tv_sampRateLabel"
+        android:layout_toRightOf="@+id/tv_freqLabel"
+        android:ems="10"
+        android:inputType="number"
+        android:text="97.95" >
+    </EditText>
 
     <TextView
         android:id="@+id/tv_output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bt_openHackRF"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/bt_openHackRF"
-        android:layout_marginTop="25dp"
+        android:layout_below="@+id/et_freq"
         android:scrollbars="vertical" />
 
 </RelativeLayout>
