Added methods to set sample rate, frequency, baseband filter width, vga gain (rx and tx), lna gain, amplifier and antenna port power.

--- a/examples/res/layout/activity_main.xml
+++ b/examples/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
         android:layout_toRightOf="@+id/tv_freqLabel"
         android:ems="10"
         android:inputType="number"
-        android:text="97.95" >
+        android:text="97000000" >
     </EditText>
 
     <TextView
