Added help button to gui. Locked Portrait mode. Stopped keyboard from popping up

--- a/examples/res/menu/main.xml
+++ b/examples/res/menu/main.xml
@@ -2,6 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.mantz_it.hackrf_test.MainActivity" >
 
+    <item android:id="@+id/action_help"
+          android:title="@string/action_help"
+          android:showAsAction="ifRoom" />
+    
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
