--- a/examples/res/menu/main.xml
+++ b/examples/res/menu/main.xml
@@ -5,7 +5,11 @@
     <item android:id="@+id/action_help"
           android:title="@string/action_help"
           android:showAsAction="ifRoom" />
-    
+    <item
+        android:id="@+id/action_showLog"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_showLog"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
